adds endpoints for data deletion
